--- a/ChatBotHook.Tests/ChatBotHook.Tests.csproj
+++ b/ChatBotHook.Tests/ChatBotHook.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.0</TargetFramework>
@@ -8,6 +8,7 @@
 
     <PackageReference Include="Amazon.Lambda.Core" Version="1.0.0" />
     <PackageReference Include="Amazon.Lambda.TestUtilities" Version="1.0.0" />
+    <PackageReference Include="AWSSDK.Core" Version="3.3.15" />
 
     <PackageReference Include="xunit" Version="2.2.0" />
 
@@ -17,6 +18,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ChatBotHook\ChatBotHook.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
   </ItemGroup>
 
 </Project>
