Changed so FunctionHandler receives a dynamic type and uses the IntentName to create an IntentHandler
Kind of a mess right now

--- a/ChatBotHook/ChatBotHook.csproj
+++ b/ChatBotHook/ChatBotHook.csproj
@@ -20,13 +20,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="NLog.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <ProjectReference Include="..\ChatBotHook.IntentHandlers\ChatBotHook.IntentHandlers.csproj" />
+    <ProjectReference Include="..\Core\Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj" />
+    <None Update="NLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
