--- a/ChatBotHook/NLog.config
+++ b/ChatBotHook/NLog.config
@@ -5,10 +5,10 @@
   <variable name="verbose" value="${longdate} | ${machinename} | ${processid} | ${processname} | ${level} | ${logger} | ${message}"/>
   <targets>
     <target name="aws" type="AWSTarget" logGroup="BotLogger" region="us-east-2"/>
-    <target name="logfile" xsi:type="Console" layout="${callsite} ${message}" />
-    <target name="fileLogger" xsi:type="File" layout="${verbose}" fileName="${basedir}/${shortdate}.log" />
+   <!-- <target name="logfile" xsi:type="Console" layout="${callsite} ${message}" /> -->
+    <!-- <target name="fileLogger" xsi:type="File" layout="${verbose}" fileName="${basedir}/${shortdate}.log" /> -->
   </targets>
   <rules>
-    <logger name="*" minlevel="Info" writeTo="logfile,aws" />
+    <logger name="*" minlevel="Info" writeTo="aws" />
   </rules>
 </nlog>
