--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -14,9 +14,11 @@
 
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.Serialization.Json" Version="1.1.0" />
-    <PackageReference Include="AutoMapper" Version="6.1.1" />
     <PackageReference Include="AWSSDK.Core" Version="3.3.15" />
-    <PackageReference Include="NLog" Version="5.0.0-beta09" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
