Started on db work. Very rough right now.

--- a/ChatBotHook/NLog.config
+++ b/ChatBotHook/NLog.config
@@ -4,11 +4,11 @@
       throwExceptions="false" >
   <variable name="verbose" value="${longdate} | ${machinename} | ${processid} | ${processname} | ${level} | ${logger} | ${message}"/>
   <targets>
-    <target name="aws" type="AWSTarget" logGroup="BotLogger" region="us-east-2"/>
-   <!-- <target name="logfile" xsi:type="Console" layout="${callsite} ${message}" /> -->
+    <target name="aws" type="AWSTarget" logGroup="BotLogger" region="us-east-1"/>
+    <target name="logfile" xsi:type="Console" layout="${callsite} ${message}" /> 
     <!-- <target name="fileLogger" xsi:type="File" layout="${verbose}" fileName="${basedir}/${shortdate}.log" /> -->
   </targets>
   <rules>
-    <logger name="*" minlevel="Info" writeTo="aws" />
+    <logger name="*" minlevel="Info" writeTo="aws,logfile" />
   </rules>
 </nlog>
