--- a/ChatBotHook.DAL.Tests/ChatBotHook.DAL.Tests.csproj
+++ b/ChatBotHook.DAL.Tests/ChatBotHook.DAL.Tests.csproj
@@ -1,23 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
+  <PropertyGroup>    
     <TargetFramework>netcoreapp1.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-
-    <PackageReference Include="Amazon.Lambda.Core" Version="1.0.0" />
-    <PackageReference Include="Amazon.Lambda.TestUtilities" Version="1.0.0" />
-    <PackageReference Include="AWSSDK.Core" Version="3.3.17.1" />
-
-    <PackageReference Include="xunit" Version="2.2.0" />
-
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
+    <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ChatBotHook\ChatBotHook.csproj" />
+    <ProjectReference Include="..\ChatBotHook.DAL\ChatBotHook.DAL.csproj" />
   </ItemGroup>
 
   <ItemGroup>
