--- a/ChatBotHook.DAL/ChatBotHook.DAL.csproj
+++ b/ChatBotHook.DAL/ChatBotHook.DAL.csproj
@@ -4,13 +4,10 @@
     <TargetFramework>netcoreapp1.0</TargetFramework>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <OutputPath>..\bin\</OutputPath>
-  </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Amazon.Lambda.Serialization.Json" Version="1.1.0" />
     <PackageReference Include="AWSSDK.Core" Version="3.3.17.1" />
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.3.4.16" />
+    <PackageReference Include="AWSSDK.S3" Version="3.3.8.2" />
   </ItemGroup>
 
 </Project>
