--- a/ChatBotHook.DAL/ChatBotHook.DAL.csproj
+++ b/ChatBotHook.DAL/ChatBotHook.DAL.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="AWSSDK.S3" Version="3.3.8.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj" />
+  </ItemGroup>
+
 </Project>
