Lots of cleanup, updated/added unit tests

--- a/ChatBotHook.IntentHandlers/ChatBotHook.IntentHandlers.csproj
+++ b/ChatBotHook.IntentHandlers/ChatBotHook.IntentHandlers.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ChatBotHook.DAL\ChatBotHook.DAL.csproj" />
     <ProjectReference Include="..\Core\Core.csproj" />
   </ItemGroup>
 
