--- a/ChatBotHook.DAL/ChatBotHook.DAL.csproj
+++ b/ChatBotHook.DAL/ChatBotHook.DAL.csproj
@@ -5,9 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWS.Logger.NLog" Version="1.1.2" />
     <PackageReference Include="AWSSDK.Core" Version="3.3.17.1" />
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.3.4.16" />
     <PackageReference Include="AWSSDK.S3" Version="3.3.8.2" />
+    <PackageReference Include="NLog" Version="5.0.0-beta09" />
   </ItemGroup>
 
   <ItemGroup>
